; ModuleID = '/home/carl/AnghaBench/postgres/src/common/extr_saslprep.c_is_code_in_table.c'
source_filename = "/home/carl/AnghaBench/postgres/src/common/extr_saslprep.c_is_code_in_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@codepoint_range_cmp = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64*, i32)* @is_code_in_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_code_in_table(i64 %0, i64* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i64* %1, i64** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = srem i32 %8, 2
  %10 = icmp eq i32 %9, 0
  %11 = zext i1 %10 to i32
  %12 = call i32 @Assert(i32 %11)
  %13 = load i64, i64* %5, align 8
  %14 = load i64*, i64** %6, align 8
  %15 = getelementptr inbounds i64, i64* %14, i64 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp slt i64 %13, %16
  br i1 %17, label %27, label %18

18:                                               ; preds = %3
  %19 = load i64, i64* %5, align 8
  %20 = load i64*, i64** %6, align 8
  %21 = load i32, i32* %7, align 4
  %22 = sub nsw i32 %21, 1
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i64, i64* %20, i64 %23
  %25 = load i64, i64* %24, align 8
  %26 = icmp sgt i64 %19, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %18, %3
  store i32 0, i32* %4, align 4
  br label %37

28:                                               ; preds = %18
  %29 = load i64*, i64** %6, align 8
  %30 = load i32, i32* %7, align 4
  %31 = sdiv i32 %30, 2
  %32 = load i32, i32* @codepoint_range_cmp, align 4
  %33 = call i64 @bsearch(i64* %5, i64* %29, i32 %31, i32 16, i32 %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %28
  store i32 1, i32* %4, align 4
  br label %37

36:                                               ; preds = %28
  store i32 0, i32* %4, align 4
  br label %37

37:                                               ; preds = %36, %35, %27
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i64 @bsearch(i64*, i64*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
